# scrift-python

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md
docs/decisions/: 0001-single-retry-on-429.md
scrift/: __init__.py  _api_key.py  _client.py  _http.py  _responses.py  exceptions.py  models.py
scrift/resources/: __init__.py  brand.py  catalog.py  raster.py  svg.py
tests/: conftest.py  test_api_key.py  test_brand.py  test_catalog.py  test_catalog_validation.py  test_exceptions.py  test_raster.py  test_raster_validation.py  test_responses_extra.py  test_svg.py
