[project]
name = "scrift"
version = "0.2.0"
description = "Python SDK for the Scrift brand asset API"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "Scrift", email = "hello@phazeo.com" }]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://scrift.app"
Documentation = "https://scrift.app/docs"
Repository = "https://github.com/scrift/scrift-python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "respx>=0.22.0",
    "ruff>=0.15.9",
]

[tool.ruff]
target-version = "py313"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["scrift"]
